--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <p class="text-center pb-3 font-sans font-normal text-black">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
     </div>
     <div>
-      <div class="mx-20 mt-5 xs:mx-5">
+      <div class="mx-20 xs:mx-0 xss:mx-0 mt-5">
         <div
           class="rounded-t-lg border border-neutral-200 bg-white">
           <h2 class="mb-0">
